--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,17 +2,16 @@
     <div class="modal-dialog modal-lg" role="document" style="max-width: 320px;">
         <div class="modal-content" [ngStyle]="ngStyleButton(2)">
             <div class="modal-header">
-                <b><i class="fa fa-sign-in"></i> Version 0.5</b>
+                <b><i class="fa fa-sign-in"></i> Version 0.6</b>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body" style="text-align: center; font-size: 20px;">
-
                 <div *ngIf="apiMessage">{{apiMessage}}</div>
                 <div *ngIf="userId">
                     <div style="font-size: 12px;"><b>User Logged in</b></div>
-                    <div style="font-size: 12px;">Email: {{user.email}}</div>
+                    <div style="font-size: 12px;">username: {{user.username}}</div>
                     <div style="font-size: 12px;">Id: {{user.id}}</div>
                     <app-button (click)="logout()" [name]="'Logout'" class="large" [butStyle]="1">
                     </app-button>
@@ -37,8 +36,9 @@
                         </app-button>
                         <hr>
 
-                        <app-button (click)="facebookPressed()" name="Login with Facebook" icon="facebook" [butStyle]="3">
-                        </app-button> 
+                        <app-button (click)="facebookPressed()" name="Login with Facebook" icon="facebook"
+                            [butStyle]="3">
+                        </app-button>
 
                         <hr>
 
@@ -86,7 +86,9 @@
                                     (click)="crewClicked()"></i> Film Crew</div>
                             <div><i [ngClass]="ngClassBox(actorFlg)" style="cursor: pointer;"
                                     (click)="actorClicked()"></i> Actor</div>
-
+                            <div><i [ngClass]="ngClassBox(criticFlg)" style="cursor: pointer;"
+                                    (click)="criticClicked()"></i> Film Critic</div>
+                            <div style="font-size: 12px;">Or leave all blank if none apply</div>
                         </div>
                         <div *ngIf="errorMessage" style="color: red;">{{errorMessage}}</div>
                         <app-button (click)="createPressed()" [name]="'Create'" class="large" [icon]="'sign-in'"
