--- a/src/app/review-detail/review-detail.component.html
+++ b/src/app/review-detail/review-detail.component.html
@@ -1,43 +1,53 @@
-<div *ngIf="!reviewDeletedFlg">
-    <div class="container-fluid" style="background-color: #444; color: white;">
-        <div class="row">
-            <div class="col-sm-4" style="font-size: 20px;" [title]="review.starTitle">
-                <i class="fa fa-star" style="color: yellow;"></i>
-                <i class="fa fa-star" style="color: yellow;" *ngIf="review.stars>=4"></i>
-                <i class="fa fa-star" style="color: yellow;" *ngIf="review.stars>=6"></i>
-                <i class="fa fa-star" style="color: yellow;" *ngIf="review.stars>=8"></i>
-                <i class="fa fa-star" style="color: yellow;" *ngIf="review.stars>=10"></i>
-                <i class="fa fa-star-o" style="color: #ccc;" *ngIf="review.stars < 4"></i>
-                <i class="fa fa-star-o" style="color: #ccc;" *ngIf="review.stars < 6"></i>
-                <i class="fa fa-star-o" style="color: #ccc;" *ngIf="review.stars < 8"></i>
-                <i class="fa fa-star-o" style="color: #ccc;" *ngIf="review.stars < 10"></i>
-            </div>
-            <div class="col-sm-4" style="font-size: 20px;">
-                <i class="fa fa-thumbs-up" style="color: #00ff00;" *ngIf="review.stars >= 6"
+<div *ngIf="!reviewDeletedFlg" class="reviewBox">
+    <table width="100%">
+        <tr style="background-color: #ddd;">
+            <td width="33%" [title]="review.starTitle">
+                <i class="fa fa-star" style="color: #00009b;"></i>
+                <i class="fa fa-star" style="color: #00009b;" *ngIf="review.stars>=4"></i>
+                <i class="fa fa-star" style="color: #00009b;" *ngIf="review.stars>=6"></i>
+                <i class="fa fa-star" style="color: #00009b;" *ngIf="review.stars>=8"></i>
+                <i class="fa fa-star" style="color: #00009b;" *ngIf="review.stars>=10"></i>
+                <i class="fa fa-star-o" style="color: #777;" *ngIf="review.stars < 4"></i>
+                <i class="fa fa-star-o" style="color: #777;" *ngIf="review.stars < 6"></i>
+                <i class="fa fa-star-o" style="color: #777;" *ngIf="review.stars < 8"></i>
+                <i class="fa fa-star-o" style="color: #777;" *ngIf="review.stars < 10"></i>
+            </td>
+            <td width="33%">
+                <i class="fa fa-thumbs-up" style="color: #009900;" *ngIf="review.stars >= 6"
                     title="Liked this film"></i>
-                <i class="fa fa-thumbs-down" style="color: orange;" *ngIf="review.stars < 6"
+                <i class="fa fa-thumbs-down" style="color: red;" *ngIf="review.stars < 6"
                     title="disliked this film"></i>
-            </div>
-            <div class="col-sm-4">
-                <i (click)="upvoteReview()" class="fa fa-arrow-circle-up iconLink" title="Up-Vote"></i> {{review.likes}}
-                &nbsp;
-                <i (click)="downvoteReview()" class="fa fa-arrow-circle-down iconLink" title="Down-Vote"></i>
-                {{review.dislikes}}
-            </div>
-        </div>
+            </td>
+            <td width="33%" style="font-size: 12px; color: gray;">
+                {{review.createdDay}}
+            </td>
+        </tr>
+    </table>
 
-    </div>
-    <div class="reviewBox">
-
+    <div [routerLink]="['/user']" [queryParams]="{id: review.user_id}">
         <div style="font-size: 12px"><b>{{review.name}}'s Review:</b></div>
+    </div>
+
+    <div style="text-align: left; padding: 5px;">
         <p *ngFor="let line of review.reviewLines1">{{line}}</p>
     </div>
-    <div style="background-color: #ccc; font-size: 12px; cursor: pointer;">
-        <span [routerLink]="['/user']" [queryParams]="{id: review.user_id}">{{review.name}} - {{review.created}}</span>
-        <app-button *ngIf="review.isMineFlg" [class]="'narrow'" [butStyle]="5" style="float: right;"
-            (click)="showDeleteFlg = true" [name]="'Delete'" [icon]="'trash'"></app-button>
-        <app-button *ngIf="review.isMineFlg" [class]="'narrow'" [butStyle]="4" style="float: right;"
-            (click)="editReviewClicked()" [name]="'Edit'" [icon]="'pencil'"></app-button>
+
+    <div style="background-color: #ddd; text-align: center;">
+        <i (click)="upvoteReview()" class="fa fa-arrow-circle-up iconLink" title="Up-Vote"
+            [ngStyle]="ngStyleDisabled(review.isUpVoted)"></i>
+        {{review.likes}}
+        &nbsp;
+        <i (click)="downvoteReview()" class="fa fa-arrow-circle-down iconLink" title="Down-Vote"
+            [ngStyle]="ngStyleDisabled(review.isDownVoted)"></i>
+        {{review.dislikes}}
+        <app-button *ngIf="review.isMineFlg" [class]="'narrow'" [butStyle]="5" (click)="showDeleteFlg = true"
+            [name]="'Delete'" [icon]="'trash'"></app-button>
+        <app-button *ngIf="review.isMineFlg" [class]="'narrow'" [butStyle]="4" (click)="editReviewClicked()"
+            [name]="'Edit'" [icon]="'pencil'"></app-button>
+        <app-button *ngIf="!review.isMineFlg && !review.bestFlg" [disabled]="votingFlg" [class]="'narrow'" [butStyle]="4" (click)="voteBestClicked()"
+            [name]="'Vote Best'" [icon]="'check'"></app-button>
+        <span *ngIf="review.bestFlg" style="font-size: 20px; color: #0A0;"><i class="fa fa-check"></i>Best!</span>
+
     </div>
     <div *ngIf="showDeleteFlg" style="background-color: yellow;">
         <div>Are you sure you want to permanently delete this review?</div>
