--- a/src/app/review-detail/review-detail.component.scss
+++ b/src/app/review-detail/review-detail.component.scss
@@ -1,15 +1,20 @@
 .reviewBox {
-    text-align: left;
-    border: 1px solid black; 
-    background-color: #ccc;
+    display: inline-block;
+    border: 1px solid black;
+    overflow: hidden;
+    background-color: #fff;
     color: black;
-    border-radius: 5px;
-    margin: 10px; 
-    padding: 5px;
- }
+    border-radius: 10px;
+    margin: 2px; 
+    box-shadow: 5px 5px 5px black;
+    width: 100%;
+    max-width: 390px;
+}
+.reviewBox:hover {
+    background-color: #ccccff;
+}
  .iconLink {
      font-size: 24px;
-     cursor: pointer;
  }
  .iconLink:hover {
     font-weight: 700;
