--- a/src/app/user-bar/user-bar.component.scss
+++ b/src/app/user-bar/user-bar.component.scss
@@ -5,6 +5,8 @@
     top: 60px;
     z-index: 100;
     background-color: #444;
+    white-space: nowrap;
+    overflow: hidden;
  }
  .wordLink {
     cursor: pointer;
