--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -6,7 +6,7 @@
         <img src="assets/graphics/logo.png" style="width: 100%; max-width: 600px;" title="Snohomish Film Festival">
         <div style="font-weight: 700; font-size: 16px;">Featuring Short Films</div>
         <div>
-            Coming September 2021, Snohomish Film Festival is your chance to see local, award-winning films, along with the
+            Snohomish Film Festival is your chance to see local, award-winning films, along with the
             cast and crews that created them!
         </div>
     </div>
@@ -27,7 +27,8 @@
                 <div class="col-sm-6">
                     <div class="borderClass">
                         <div class="titleCLass">Event Details</div>
-                        This event will kick off September 2021, giving local film makers a chance to show off your work!
+                        <div>This event will be September 18, 2021, giving local film makers a chance to show off your work!</div>
+                        
                         <div style="text-align: center; padding: 10px;">
                             <app-button [routerLink]="['/tickets']" [name]="'More Info'"></app-button>
                         </div>
