--- a/src/app/add-film-popup/add-film-popup.component.html
+++ b/src/app/add-film-popup/add-film-popup.component.html
@@ -10,25 +10,24 @@
             <div class="modal-body">
 
                 <div *ngIf="filmType==0">
+                    <p style="text-align: center;">Two ways to submit your film:</p>
                     <table width="100%">
                         <tr>
-                            <td align="center" width="50%">
-                                <button [disabled]="true" (click)="filmType=2" type="button" class="btn-default roundButton large"
+                            <td align="center" valign="top" width="50%">
+                                <button (click)="showStartDateFlg = true" type="button" class="btn-default roundButton large"
                                     [ngStyle]="ngStyleSegment(buttonIdx,1)">
-                                    <i class="fa fa-arrow-right"></i> Submit Your Film
+                                    <i class="fa fa-arrow-right"></i> Film Festival
                                 </button>
                                 <div style="font-size: 12px; padding: 10px;">Submit your film to the 2021 Snohomish Film
                                     Festival.</div>
-                                <div style="color: yellow;">Submissions begin Oct 1, 2020</div>
+                                <div style="color: yellow;" *ngIf="showStartDateFlg">Submissions begin Oct 1, 2020</div>
                             </td>
-                            <td align="center" width="50%">
-                                <button (click)="filmType=1" type="button" class="btn-default roundButton segmentButton"
+                            <td align="center" valign="top" width="50%">
+                                <button (click)="filmType=1" type="button" class="btn-default roundButton large"
                                     [ngStyle]="ngStyleSegment(buttonIdx,1)">
-                                    <i class="fa fa-plus"></i> Database
+                                    <i class="fa fa-arrow-right"></i> Database
                                 </button>
-                                <div style="font-size: 12px; padding: 10px;">Add an older film to our database to allow
-                                    users to comment and write reviews. Note: This option is for films that are not going to be part of the 2021 Film Festival. 
-                                    Once you submit a film to the database, it is immediately viewable to the public.</div>
+                                <div style="font-size: 12px; padding: 10px;">Add an older film to our database, which will be immediately viewable to the public.</div>
                             </td>
                         </tr>
                     </table>
@@ -37,9 +36,7 @@
                     <p *ngIf="filmType==1">Use this form to add an existing project of yours to our active database.
                         This
                         will allow users and film critics to leave comments and write reviews.</p>
-                    <p *ngIf="filmType==1">Note: Your film must be publically viewable on a site like youtube. You also
-                        need to include a
-                        promo poster or screen shot.</p>
+                    <p *ngIf="filmType==1">Note: Your film must be publically viewable on a site like youtube or amazon.</p>
                     <p *ngIf="filmType==2">Submitting your film costs $40. You will be notified by August 1st if your
                         film
                         has been selected for showing at the film festival.</p>
