[sff] lots of changes and guild page

--- a/src/app/awards/awards.component.html
+++ b/src/app/awards/awards.component.html
@@ -13,11 +13,11 @@
                         <div class="titleCLass"><i class="fa fa-trophy"></i> Film Awards</div>
                         <div class="listClass">
                             <li>Best Picture</li>
+                            <li>Best Director</li>
                             <li>Best Sound</li>
-                            <li>Best Score</li>
-                            <li>Best Directing</li>
+                            <li>Best Music Score</li>
                             <li>Best Editing</li>
-                            <li>Best Special Effects</li>
+                            <li>Best Stunts/Special Effects/Artistic Appeal</li>
                             <li>Best Actor</li>
                             <li>Best Actress</li>
                             <li>Best Supporting Actor</li>
@@ -29,14 +29,15 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="borderClass">
-                        <div class="titleCLass"><i class="fa fa-video-camera"></i> Genres</div>
+                        <div class="titleCLass"><i class="fa fa-list-alt"></i> Genres</div>
                         <div class="listClass">
-                            <li>Action/Drama</li>
                             <li>Comedy</li>
                             <li>Documentary</li>
-                             <li>Horror</li>
+                            <li>Drama</li>
+                            <li>Horror</li>
                             <li>Music Video</li>
-                            <li>Musical</li>
+                            <li>Sci-Fi</li>
+                            <li>Other</li>
                          </div>
                     </div>
                 </div>
