--- a/src/app/festival-program/festival-program.component.html
+++ b/src/app/festival-program/festival-program.component.html
@@ -8,7 +8,7 @@
     <div class="blackBox">
         <img src="assets/graphics/logo.png" style="width: 100%; max-width: 600px;" title="Snohomish Film Festival">
 
-        <table class="drTable" border="1">
+        <table class="drTable" border="0">
             <tr>
                 <td colspan="4" style="background-color: #000060; color: white;">Festival Program</td>
             </tr>
@@ -48,7 +48,7 @@
             </tr>
 
             <tr>
-                <td colspan="4" style="background-color: #ccccff;">5pm hour for local Snohomish County Films</td>
+                <td colspan="4" style="background-color: #ccccff;">5pm hour features local Snohomish County Films</td>
             </tr>
             <tr>
                 <td>5pm</td>
