--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,10 +1,11 @@
-<app-page-shell [userId]="userId" [lButton]="'info'" [navTitle]="'Main Menu'" [icon]="'fa-bars'" (messageEvent)="buttonClicked ($event)">
+<app-page-shell [userId]="userId" [lButton]="'info'" [rButton]="'brush'" [navTitle]="'Main Menu'" [icon]="'fa-bars'" (messageEvent)="buttonClicked ($event)">
 
     <img src="assets/graphics/film1.jpg" class="image">
     <app-button-bar [buttonIdx]="0"></app-button-bar>
     <div class="blackBox">
         <img src="assets/graphics/logo.png" style="width: 100%; max-width: 600px;" title="Snohomish Film Festival">
         <div style="font-weight: 700; font-size: 16px;">Featuring Short Films</div>
+        <div style="font-size: 32px;">September 18, 2021</div>
         <div>
             Snohomish Film Festival is your chance to see local, award-winning films, along with the
             cast and crews that created them!
@@ -18,9 +19,10 @@
                 <div class="col-sm-6">
                     <div class="borderClass">
                         <div class="titleCLass">Submit Your Projects!</div>
-                        Now accepting film projects of any kind to be entered into our database. This is your chance to have your film seen by others and available for reviews.
+                        We start accepting films on October 1, 2020. Early bird special just $15 to submit your project. Guaranteed feedback from multiple industry insiders for all submitted films, whether your project is featured or not.
+                        <div style="font-size: 32px; text-align: center;"></div>
                         <div style="text-align: center; padding: 10px;">
-                            <app-button [routerLink]="['/films']" [name]="'More Info'"></app-button>
+                            <app-button [routerLink]="['/submit']" [name]="'More Info'"></app-button>
                         </div>
                     </div>
                 </div>
@@ -31,6 +33,7 @@
                         
                         <div style="text-align: center; padding: 10px;">
                             <app-button [routerLink]="['/tickets']" [name]="'More Info'"></app-button>
+                            <app-button [routerLink]="['/contact']" [name]="'Contact Us'"></app-button>
                         </div>
                      </div>
                 </div>
