--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -74,8 +74,12 @@
                 </div>
 
                 <app-film-snapshot *ngFor="let film of displayUser.films" [film]="film"></app-film-snapshot>
-                <app-button *ngIf="userId==1 && !displayUser.adminFlg" [name]="'Upgrade to Admin'" [icon]="'lock'" (click)="upgradeToAdmin('upgradeToAdmin')"></app-button>
-                <app-button *ngIf="userId==1 && !displayUser.guildMemberFlg" [name]="'Upgrade to Guild'" [icon]="'shield'" (click)="upgradeToAdmin('upgradeToGuild')"></app-button>
+
+                <div *ngIf="userId==1">
+                    <app-button *ngIf="userId==1 && !displayUser.adminFlg" [name]="'Upgrade to Admin'" [icon]="'lock'" (click)="upgradeToAdmin('upgradeToAdmin')"></app-button>
+                    <app-button *ngIf="userId==1 && !displayUser.guildMemberFlg" [name]="'Upgrade to Guild'" [icon]="'shield'" (click)="upgradeToAdmin('upgradeToGuild')"></app-button>
+                    <app-button *ngIf="userId==1 && !displayUser.staffFlg" [name]="'Upgrade to Staff'" [icon]="'suitcase'" (click)="upgradeToAdmin('upgradeToStaff')"></app-button>    
+                </div>
 
                 <table class="drTable" *ngIf="userRoles && userId==1">
                     <tr>
